# ENDSim

./: .gitignore  CMakeLists.txt  Makefile  README.md  dimenPlot.py  displayEvents.py  displayEvents2.py  displayEvents2_save.py  displayEvents3.py  displayEvents4.py  drawing_pen_small.py  drawing_pen_small_equlx_short.py  drawing_plane.py  end.sh  generate_dom_geometry.py  generate_mac_files.py  muon_1gev.mac  plotTime.py  run_theia.sh  theia.mac  timeCal.py  timeCal2.py  verify_dom_geometry.py  vis.mac
config/: Config.hh.in  end.sh.in
examples/c++/: Makefile  pmt_ana.cc  pmt_bdt.cc  pmt_event.cc  pmt_ntuple.cc  timing_root.cc
macros/: geometry.mac
models/: fluxHistos.root
ratdb/: DETECTOR.ratdb  DICHROICONS.ratdb  LASERBALL.ratdb  LED.ratdb  MATERIALS_aluminum.ratdb  MATERIALS_aluminum.ratdb.disabled  MATERIALS_borosilicate.ratdb  MATERIALS_wbls.ratdb  OPTICS_DU.ratdb  OPTICS_borosilicate.ratdb  OPTICS_filters.ratdb  OPTICS_wbls.ratdb  PMT.ratdb  PMTINFO_new.ratdb  SN_SPECTRUM.ratdb
ratdb/End/: DOMINFO.gdml  DOMINFO2nd.gdml  DOMINFO_3d.gdml  DOMINFO_3d2nd.gdml  DOMINFO_5str.gdml  DOMINFO_5str2nd.gdml  DOMINFO_large.gdml  DOMINFO_large2nd.gdml  DOMINFO_med.gdml  DOMINFO_med2nd.gdml  END.geo  (+23 more)
src/: CMakeLists.txt  End.cc  GeoArrayFactory.cc  GeoArrayFactory.hh  GeoEndFactory.cc  GeoGdmlFactory.cc  GeoGdmlFactory.hh  HitmanProc.cc  LaserballGenerator.cc  MyDAQProc.cc  MyDAQProc.hh  NtupleProc.cc  OpticsFixProc.cc  end.cpp
src/include/: Config.hh  End.hh  GeoTheiaFactory.hh  HitmanProc.hh  LaserballGenerator.hh  NtupleProc.hh  OpticsFixProc.hh  Theia.hh
(+33 files in other folders)
